[package]
name = "enrex_stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "enrex_stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.22.0", features=["init-if-needed"]}
anchor-spl = "0.22.0"